--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
 /* 
 Theme Name: Pilot Fish 
 Theme URI: http://wordpress.danielatwork.com/project/pilot-fish/
-Description: Pilot Fish is an elegant portfolio theme with minimal design: featuring a custom post type to highlight projects and work, and parallax scrolling on the front page to display a featured image. Responsive layout makes it adaptive to mobile devices. Also Pilot Fish supports custom menus, post formats and is available in Japanese, Spanish and Russian. In this release, version 0.3.3,  new features include a dropdown menu for mobile devices, a theme option to include Google Analytics and is now compatible with IE8. Disclaimer: if you modified code in the original theme then an update will erase all your changes. So please either ignore this release or back up your changes.
-
+Description: Pilot Fish is an elegant portfolio theme with minimal design: featuring a custom post type to highlight projects and work, and parallax scrolling on the front page to display a featured image. Responsive layout makes it adaptive to mobile devices. Also Pilot Fish supports custom menus, post formats and is available in Japanese, Spanish, Russian and Dutch.
 Author: Daniel Zhao
 Author URI: http://danielatwork.com/
-Version: 0.3.3 
+Version: 0.3.4 
 Tags: white, blue, gray, light, custom-menu, custom-header, custom-background, one-column, two-columns, right-sidebar, featured-images, flexible-width, full-width-template, post-formats, translation-ready, theme-options
 	
 License: GNU General Public License (GPL)
