add project by skills

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* 
 Theme Name: Pilot Fish 
 Theme URI: http://wordpress.danielatwork.com/project/pilot-fish/
-Description: Pilot Fish is an elegant portfolio theme with minimal design: featuring a custom post type to highlight projects and work, and parallax scrolling on the front page to display a featured image. Responsive layout makes it adaptive to mobile devices. Also Pilot Fish supports custom menus, post formats and is available in Japanese, Spanish, Russian and Dutch.
+Description: Pilot Fish is an elegant portfolio theme with minimal design: featuring a custom post type to highlight projects and work, and parallax scrolling on the front page to display a featured image. Responsive layout makes it adaptive to mobile devices. Also Pilot Fish supports custom menus, post formats, and is available in Japanese, Spanish, Russian and Dutch. In this release, version 0.3.4, new features include a project type for custom post "project", and . Disclaimer: if you modified code in the original theme then an update will erase all your changes. So please either ignore this release or back up your changes. 
 Author: Daniel Zhao
 Author URI: http://danielatwork.com/
 Version: 0.3.4 
