--- a/style.css
+++ b/style.css
@@ -361,7 +361,7 @@ License URI: license.txt
 	#wrapper {
 		background-color:transparent;
 		clear:both;
-		margin: 20px auto;
+		/*margin: 20px auto;*/
 		padding: 0 20px 20px 20px;
 		position:relative;
 }
@@ -561,8 +561,8 @@ License URI: license.txt
 		top:0;
 }
 	#access .menu ul {
-		margin:-10px 0 0 -30px;
-		padding:10px 30px 30px;
+		margin: 0;
+		padding: 0;
 }
 	#access .menu ul ul {
 		margin:-30px 0 0 -10px;
@@ -880,14 +880,6 @@ License URI: license.txt
 	.stack { position: relative; z-index: 10; }
  
 /* Image styles */
-/*	.stack img { max-width: 100%; height: auto; vertical-align: bottom; border: 10px solid #fff; border-radius: 3px;
-	    -webkit-box-sizing: border-box;
-	    -moz-box-sizing: border-box;
-	    box-sizing: border-box;
-	    -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.4);
-	    -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.4);
-	    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.4);
-}*/
 
 /*	Featured Content	*/
 	#featured {
