--- a/style.css
+++ b/style.css
@@ -1392,6 +1392,13 @@ License URI: license.txt
   	}
 }
 
+@media only screen and (max-width: 692px) {
+  	#thumbnail {
+  		width: 300px;
+  		margin: auto;
+  	}
+}
+
 /* Portrait tablet to landscape and desktop */
 @media only screen and (min-width: 768px) and (max-width: 979px) {
   	#container { width: 100%; padding-left:0; padding-right:0; }
@@ -1409,6 +1416,10 @@ License URI: license.txt
   	[class*="span"] {
     		float: left;
   	}
+  	#thumbnail {
+		width: 636px;
+		margin: auto;
+	}
   	#thumbnail .last {
 		margin-right:2.083% !important;
   	}
