--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: http://wordpress.danielatwork.com/project/pilot-fish/
 Description: Pilot Fish is an elegant portfolio theme with minimal design: featuring a custom post type to highlight projects and work, and parallax scrolling on the front page to display a featured image. Responsive layout makes it adaptive to mobile devices. Also Pilot Fish supports custom menus, post formats, and is available in Japanese, Spanish, Russian and Dutch. In this release, version 0.3.4, new features include custom category and custom tags listings for project, now you can have several project archieve pages by different project types and skills. Disclaimer: if you modified code in the original theme then an update will erase all your changes. So please either ignore this release or back up your changes.
 Author: Daniel Zhao
 Author URI: http://danielatwork.com/
-Version: 0.3.4 
+Version: 0.4.0
 Tags: white, blue, gray, light, custom-menu, custom-header, custom-background, one-column, two-columns, right-sidebar, featured-images, flexible-width, full-width-template, post-formats, translation-ready, theme-options
 	
 License: GNU General Public License (GPL)
@@ -361,7 +361,7 @@ License URI: license.txt
 	#wrapper {
 		background-color:transparent;
 		clear:both;
-		/*margin: 20px auto;*/
+		margin: 20px auto;
 		padding: 0 20px 20px 20px;
 		position:relative;
 }
