--- a/style.css
+++ b/style.css
@@ -4,12 +4,15 @@ Theme URI: http://wordpress.danielatwork.com/project/pilot-fish/
 Description: Pilot Fish is an elegant portfolio theme with minimal design: featuring a custom post type to highlight projects and work, and parallax scrolling on the front page to display a featured image. Responsive layout makes it adaptive to mobile devices. Also Pilot Fish supports custom menus, post formats, and is available in Japanese, Spanish, Russian, Dutch and German. Disclaimer: if you modified code in the original theme then an update will erase all your changes. So please either ignore this release or back up your changes.
 Author: Daniel Zhao
 Author URI: http://danielatwork.com/
-Version: 0.4.0
+Version: 0.4.1
 Tags: white, blue, gray, light, custom-menu, custom-header, custom-background, one-column, two-columns, right-sidebar, featured-images, fluid-layout, responsive-layout, full-width-template, post-formats, translation-ready, theme-options
 	
 License: GNU General Public License (GPL)
 License URI: license.txt
- 
+
+Resource Licenses:
+Cover Photo Bavarian Forest from Kimmo Savolainen(http://www.ks-image.com/), licensed under Creative Commons.
+Stainless Icon from IconLeak(http://iconleak.com/works/free-app-icons/), under Free License Agreement(http://iconleak.com/free-license-agreement/).
  
   Table of Contents
 ==================================================
